# model-transparency

./: .gitignore  CHANGELOG.md  Containerfile  Dockerfile.model-transparency.rh  README.md  codecov.yml  generate-trust-config.sh  modelcar-signing-test.md  pyproject.toml  requirements-build.txt  requirements.txt  trigger-konflux-builds.txt
.github/workflows/: cli.yml  code-coverage.yml  codeql.yml  cross_os.yml  dependency_review.yml  docs.yml  integration.yml  lint.yml  rh-release.yml  scorecard.yml  sync-upstream.yaml  test-ambient-signing.yml  unit_tests.yml
.tekton/: model-transparency-pull-request.yaml  model-transparency-push.yaml  model-transparency-tech-preview-pull-request.yaml  model-transparency-tech-preview-push.yaml
slsa_for_models/kubeflow/images/build_model/: Dockerfile
slsa_for_models/kubeflow/images/upload_model/: Dockerfile
src/model_signing/: __init__.py  _cli.py  hashing.py  signing.py  verifying.py
src/model_signing/_oci/: annotations.py  attachment.py  manifest_parser.py  registry.py
src/model_signing/_signing/: sign_sigstore.py  sign_sigstore_pb.py
tests/: api_test.py
tests/_oci/: __init__.py  attachment_test.py  manifest_parser_test.py  registry_test.py
tests/_signing/: sigstore_test.py
